# tg-bot2

./: .env.example  .gitignore  pyproject.toml  start.py
tg_bot2/: states.py  utils.py
tg_bot2/admin/: models.py  resources.py  routes.py  start.py
tg_bot2/admin/templates/: dashboard.html
tg_bot2/data/: config.py  models.py
tg_bot2/handlers/: __init__.py  collect_analysis.py  collect_consultaion.py  collect_general_info.py  collect_training.py  error.py  functionality.py  general_buttons.py  start.py
tg_bot2/keyboards/: default.py
