[tool.poetry]
name = "tg-bot2"
version = "0.1.0"
description = ""
authors = ["0xshodan <hngdean@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_bot2"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
tortoise-orm = "^0.19.3"
fastapi-admin = "^1.0.4"
environs = "^9.5.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
